--- a/index.html
+++ b/index.html
@@ -4,119 +4,142 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>WebStudio</title>
   </head>
   <body>
     <!-- Шапка -->
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="#">Студия</a></li>
-          <li><a href="#">Портфолио</a></li>
-          <li><a href="#">Контакты</a></li>
+        <a class="logo link" href="./index.html">
+          <span class="logo-first">Web</span><span class="logo-second">Studio</span>
+        </a>
+        <ul class="list">
+          <li><a class="link current" href="./index.html">Студия</a></li>
+          <li><a class="link" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="link" href="#">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="list">
+        <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
     <!--Унікальний текст-->
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <!-- Hero -->
+
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="button">Заказать услугу</button>
       </section>
+
       <!-- Про особливості студії -->
-      <section>
-        <h2>Особенности студии</h2>
-        <ul>
+      <section class="features">
+        <h2 class="hide">Особенности студии</h2>
+        <ul class="list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <h3 class="list-title">Внимание к деталям</h3>
+            <p class="list-text">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="list-title">Пунктуальность</h3>
+            <p class="list-text">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="list-title">Планирование</h3>
+            <p class="list-text">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <h3 class="list-title">Современные технологии</h3>
+            <p class="list-text">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
       <!-- Чим займається компанія -->
       <section>
-        <h2>Чем мы занимаемся</h2>
+        <h2 class="title">Чем мы занимаемся</h2>
         <img
+          class="work"
           src="./images/img_1.jpg"
           alt="Человек занимается кодированием будущего приложения"
           width="370"
         />
         <img
+          class="work"
           src="./images/img_2.jpg"
           alt="Дизайнер выбирает оптимальный дизайн и оценивает его качество на девайсе"
           width="370"
         />
         <img
+          class="work"
           src="./images/img_3.jpg"
           alt="Графический дизайнер выбирает цвет из цветовой палитры"
           width="370"
         />
       </section>
       <!-- Команда -->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="title">Наша команда</h2>
+        <ul class="list">
+          <li class="team-card">
             <img src="./images/img_4.jpg" alt="Фото Игоря Демяненко" width="270" />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="team-title">Игорь Демьяненко</h3>
+            <p class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-card">
             <img src="./images/img_5.jpg" alt="Фото Ольги Репиной" width="270" />
-            <h3>Ольга Репина</h3>
+            <h3 class="team-title">Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-card">
             <img src="./images/img_6.jpg" alt="Фото Николая Тарасова" width="270" />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="team-title">Николай Тарасов</h3>
+            <p class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-card">
             <img src="./images/img_7.jpg" alt="Фото Михаила Ермакова" width="270" />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="team-title">Михаил Ермаков</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <!-- Підвал -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <address>
-        <ul>
+    <footer class="footer">
+      <a class="logo" href="./index.html">
+        <span class="logo-first">Web</span> <span class="logo-third">Studio</span>
+      </a>
+      <address class="contacts">
+        <ul class="list">
           <li>
             <a
+              class="contacts-link address"
               href="https://goo.gl/maps/piqngm7oDQpEDh6u6"
               target="_blank"
               rel="noopener nofollow noreferrer"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li><a class="contacts-link" href="mailto:info@example.com">info@example.com</a></li>
+          <li><a class="contacts-link" href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
