--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
     <!-- Шапка -->
     <header>
       <nav>
-        <a class="logo link" href="./index.html">
+        <a class="logo nav-link" href="./index.html">
           <span class="logo-first">Web</span><span class="logo-second">Studio</span>
         </a>
         <ul class="list">
-          <li><a class="link current" href="./index.html">Студия</a></li>
-          <li><a class="link" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="link" href="#">Контакты</a></li>
+          <li><a class="nav-link current" href="./index.html">Студия</a></li>
+          <li><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="nav-link" href="#">Контакты</a></li>
         </ul>
       </nav>
       <ul class="list">
-        <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
@@ -44,29 +44,29 @@
 
       <!-- Про особливості студії -->
       <section class="features">
-        <h2 class="hide">Особенности студии</h2>
+        <h2 class="visually-hidden">Особенности студии</h2>
         <ul class="list">
           <li>
-            <h3 class="list-title">Внимание к деталям</h3>
-            <p class="list-text">
+            <h3 class="features-title">Внимание к деталям</h3>
+            <p class="features-text">
               Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
           </li>
           <li>
-            <h3 class="list-title">Пунктуальность</h3>
-            <p class="list-text">
+            <h3 class="features-title">Пунктуальность</h3>
+            <p class="features-text">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
-            <h3 class="list-title">Планирование</h3>
-            <p class="list-text">
+            <h3 class="features-title">Планирование</h3>
+            <p class="features-text">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
-            <h3 class="list-title">Современные технологии</h3>
-            <p class="list-text">
+            <h3 class="features-title">Современные технологии</h3>
+            <p class="features-text">
               Значимость этих проблем настолько очевидна, что реализация плановых заданий.
             </p>
           </li>
@@ -74,29 +74,37 @@
       </section>
       <!-- Чим займається компанія -->
       <section>
-        <h2 class="title">Чем мы занимаемся</h2>
-        <img
-          class="work"
-          src="./images/img_1.jpg"
-          alt="Человек занимается кодированием будущего приложения"
-          width="370"
-        />
-        <img
-          class="work"
-          src="./images/img_2.jpg"
-          alt="Дизайнер выбирает оптимальный дизайн и оценивает его качество на девайсе"
-          width="370"
-        />
-        <img
-          class="work"
-          src="./images/img_3.jpg"
-          alt="Графический дизайнер выбирает цвет из цветовой палитры"
-          width="370"
-        />
+        <h2 class="section-title">Чем мы занимаемся</h2>
+        <ul class="list">
+          <li>
+            <img
+              class="work"
+              src="./images/img_1.jpg"
+              alt="Человек занимается кодированием будущего приложения"
+              width="370"
+            />
+          </li>
+          <li>
+            <img
+              class="work"
+              src="./images/img_2.jpg"
+              alt="Дизайнер выбирает оптимальный дизайн и оценивает его качество на девайсе"
+              width="370"
+            />
+          </li>
+          <li>
+            <img
+              class="work"
+              src="./images/img_3.jpg"
+              alt="Графический дизайнер выбирает цвет из цветовой палитры"
+              width="370"
+            />
+          </li>
+        </ul>
       </section>
       <!-- Команда -->
       <section class="team">
-        <h2 class="title">Наша команда</h2>
+        <h2 class="section-title">Наша команда</h2>
         <ul class="list">
           <li class="team-card">
             <img src="./images/img_4.jpg" alt="Фото Игоря Демяненко" width="270" />
@@ -131,7 +139,7 @@
         <ul class="list">
           <li>
             <a
-              class="contacts-link address"
+              class="address"
               href="https://goo.gl/maps/piqngm7oDQpEDh6u6"
               target="_blank"
               rel="noopener nofollow noreferrer"
