--- a/portfolio.html
+++ b/portfolio.html
@@ -15,28 +15,30 @@
   </head>
   <body>
     <!-- Header -->
+
     <header>
       <nav>
-        <a class="logo link" href="./index.html">
+        <a class="logo nav-link" href="./index.html">
           <span class="logo-first">Web</span><span class="logo-second">Studio</span>
         </a>
         <ul class="list">
-          <li><a class="link" href="./index.html">Студия</a></li>
-          <li><a class="link current" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="link" href="#">Контакты</a></li>
+          <li><a class="nav-link" href="./index.html">Студия</a></li>
+          <li><a class="nav-link current" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="nav-link" href="#">Контакты</a></li>
         </ul>
       </nav>
       <ul class="list">
-        <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
+
     <!-- Main -->
     <main>
       <section>
-        <h1 class="hide">Наши проекты</h1>
+        <h1 class="visually-hidden">Наши проекты</h1>
         <ul class="list">
-          <li><button class="button-nav" type="button">Все</button></li>
+          <li><button class="button-nav current" type="button">Все</button></li>
           <li><button class="button-nav" type="button">Веб-сайты</button></li>
           <li><button class="button-nav" type="button">Приложения</button></li>
           <li><button class="button-nav" type="button">Дизайн</button></li>
@@ -110,7 +112,7 @@
         <ul class="list">
           <li>
             <a
-              class="contacts-link address"
+              class="address"
               href="https://goo.gl/maps/piqngm7oDQpEDh6u6"
               target="_blank"
               rel="noopener nofollow noreferrer"
